export const snapshot = {};

snapshot[`transform example foo-bar-baz.ts 1`] = `
"class Foo {
    foo: string;
}

class FooBar {
    foo: string;
    bar: number;
}

export class FooBarBaz {
    baz: boolean;
    foo: string;
    bar: number;
}

class Bar {
    bar: number;
}
"
`;

snapshot[`transform example foo-bar-baz.ts with decorators 1`] = `
'@context({ "foo": "Foo/foo" })
class Foo {
    foo: string;
}

@context({ "foo": "Foo/foo", "bar": "Bar/bar" })
class FooBar {
    foo: string;
    bar: number;
}

@context({ "baz": "FooBarBaz/baz", "foo": "Foo/foo", "bar": "Bar/bar" })
export class FooBarBaz {
    baz: boolean;
    foo: string;
    bar: number;
}

@context({ "bar": "Bar/bar" })
class Bar {
    bar: number;
}
'
`;
